libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__path__tests__double_separator.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/path.rs
description: Double path separator
expression: "foo::::bar"
info:
  kind: Err
---
foo::::bar
   ^
