libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__path__tests__empty_generic_args.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/path.rs
description: Empty generic arguments
expression: Vec<>
info:
  kind: Err
---
Vec<>
   ^
