libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__path__tests__empty_path.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/path.rs
description: Empty path
expression: ""
info:
  kind: Err
---
^
invalid identifier
