libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__path__tests__empty_root.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/path.rs
description: Empty rooted path
expression: "::"
info:
  kind: Err
---
::
  ^
