libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__path__tests__generics_whitespace.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/path.rs
description: Whitespace in generic arguments
expression: "Vec< T , U >"
info:
  kind: Ok
---
Path#4294967040@11 (rooted: false)
  PathSegment#4294967040@10 (name: Vec)
    GenericArgument#4294967040@5
      Type#4294967040@4
        TypeKind (Path)
          Path#4294967040@4 (rooted: false)
            PathSegment#4294967040@3 (name: T)
    GenericArgument#4294967040@9
      Type#4294967040@8
        TypeKind (Path)
          Path#4294967040@8 (rooted: false)
            PathSegment#4294967040@7 (name: U)
