libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__path__tests__missing_separator.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/path.rs
description: Missing separator in generic arguments
expression: Vec<T U>
info:
  kind: Err
---
Vec<T U>
      ^
invalid path
expected `>`
