libs/@local/hashql/syntax-jexpr/src/parser/string/snapshots/hashql_syntax_jexpr__parser__string__path__tests__mixed_whitespace.snap
---
source: libs/@local/hashql/syntax-jexpr/src/parser/string/path.rs
description: Mixed whitespace patterns
expression: "std :: collections :: HashMap< K , V >"
info:
  kind: Ok
---
Path#4294967040@15 (rooted: false)
  PathSegment#4294967040@2 (name: std)
  PathSegment#4294967040@4 (name: collections)
  PathSegment#4294967040@14 (name: HashMap)
    GenericArgument#4294967040@9
      Type#4294967040@8
        TypeKind (Path)
          Path#4294967040@8 (rooted: false)
            PathSegment#4294967040@7 (name: K)
    GenericArgument#4294967040@13
      Type#4294967040@12
        TypeKind (Path)
          Path#4294967040@12 (rooted: false)
            PathSegment#4294967040@11 (name: V)
